Fuck forge registries (again)